[workspace]
members = [
    "base-7",
    "plates-between-candles",
    "best_rotation",
    "search",
    "search_insert",
    "largest_values",
    "peak_index_in_mountain_array",
    "is_perfect_square",
    "find_the_distance_value",
    "my_sqrt",
    "next_greatest_letter",
    "first_bad_version",
    "search_range",
    "is_palindrome",
    "roman_to_int",
    "longest_common_prefix",
    "is_valid",
    "moves_to_make_zigzag",
    "merge_similar_items",
    "largest_local",
    "min_deletion",
    "min_path_cost",
    "entity_parser",
    "num_prime_arrangements",
    "count_pairs",
    "length_of_longest_substring",
    "pseudo_palindromic_paths",
    "unique_letter_string",
    "find_median_sorted_arrays",
    "sum_subarray_mins",
    "FrontMiddleBackQueue",
    "SmallestInfiniteSet",
    "merge",
    "remove_element",
    "close_strings",
    "remove_duplicates",
    "first_complete_index",
    "car_pooling",
    "max_score",
    "my_pow",
    "bst_to_gst",
    "majority_element",
    "minimum_fuel_cost",
    "minimum_moves",                  # 未通过
    "max_depth",
    "minimum_total_price",
    "min_reorder",
    "can_jump",
    "RandomizedSet",
    "max_taxi_earnings",
    "product_except_self",
    "next_beautiful_number",
    "can_complete_circuit",
    "minimum_effort_path",
    "second_greater_element",
    "make_smallest_palindrome",
    "possible_to_stamp",
    "CountIntervals",                 # 存疑
    "maximum_sum_of_heights",
    "daily_temperatures",
    "msai_interview",
    "list",
    "maximum_rows",
    "trie",
    "max_number_of_alloys",
    "a_contest",
    "nums_game",
    "stone_game_vi",
    "contest383",
    "max_result_1696",
    "magic_tower_lcp_30",
    "replace_value_in_tree_20240207",
    "min_increments",
    "valid_partition",
]
default-members = ["valid_partition"]
